info/test.log
2025.11.16 00:05:30

> Task :clean
> Task :compileJava
> Task :processResources NO-SOURCE
> Task :classes

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/olek/Projekty/zajecia/io/gold_rush_test_students/build/reports/problems/problems-report.html
3 actionable tasks: 3 executed/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:49: error: cannot find symbol
                if (!board.peekToken(col, row).label()
                                              ^
  symbol:   method label()
  location: class Token
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:11: error: cannot find symbol
        Assertions.assertEquals(Label.EMPTY_TOKEN_LABEL, token.label());
                                                              ^
  symbol:   method label()
  location: variable token of type Token
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:23: error: cannot find symbol
                new EmptyToken().label());
                                ^
  symbol:   method label()
  location: class EmptyToken
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:30: error: cannot find symbol
                new GoldToken().label());
                               ^
  symbol:   method label()
  location: class GoldToken
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:37: error: cannot find symbol
                new PlayerToken(new Board()).label());
                                            ^
  symbol:   method label()
  location: class PlayerToken
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:49: error: cannot find symbol
                  if (!board.peekToken(col, row).label()
                                                ^
    symbol:   method label()
    location: class Token
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:11: error: cannot find symbol
          Assertions.assertEquals(Label.EMPTY_TOKEN_LABEL, token.label());
                                                                ^
    symbol:   method label()
    location: variable token of type Token
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:23: error: cannot find symbol
                  new EmptyToken().label());
                                  ^
    symbol:   method label()
    location: class EmptyToken
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:30: error: cannot find symbol
                  new GoldToken().label());
                                 ^
    symbol:   method label()
    location: class GoldToken
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:37: error: cannot find symbol
                  new PlayerToken(new Board()).label());
                                              ^
    symbol:   method label()
    location: class PlayerToken
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 648ms
[STDERR]
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:49: error: cannot find symbol
                if (!board.peekToken(col, row).label()
                                              ^
  symbol:   method label()
  location: class Token
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:11: error: cannot find symbol
        Assertions.assertEquals(Label.EMPTY_TOKEN_LABEL, token.label());
                                                              ^
  symbol:   method label()
  location: variable token of type Token
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:23: error: cannot find symbol
                new EmptyToken().label());
                                ^
  symbol:   method label()
  location: class EmptyToken
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:30: error: cannot find symbol
                new GoldToken().label());
                               ^
  symbol:   method label()
  location: class GoldToken
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:37: error: cannot find symbol
                new PlayerToken(new Board()).label());
                                            ^
  symbol:   method label()
  location: class PlayerToken
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:49: error: cannot find symbol
                  if (!board.peekToken(col, row).label()
                                                ^
    symbol:   method label()
    location: class Token
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:11: error: cannot find symbol
          Assertions.assertEquals(Label.EMPTY_TOKEN_LABEL, token.label());
                                                                ^
    symbol:   method label()
    location: variable token of type Token
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:23: error: cannot find symbol
                  new EmptyToken().label());
                                  ^
    symbol:   method label()
    location: class EmptyToken
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:30: error: cannot find symbol
                  new GoldToken().label());
                                 ^
    symbol:   method label()
    location: class GoldToken
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:37: error: cannot find symbol
                  new PlayerToken(new Board()).label());
                                              ^
    symbol:   method label()
    location: class PlayerToken
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 648ms